Switch to Faba icon set

--- a/.config/bspwm/xsettings.conf
+++ b/.config/bspwm/xsettings.conf
@@ -3,7 +3,7 @@ Xft/HintStyle "hintmedium"
 Xft/Hinting 1
 Xft/RGBA "none"
 Xft/lcdfilter "none"
-Net/IconThemeName "Adwaita"
+Net/IconThemeName "Faba"
 Net/ThemeName "Dracula"
 Gtk/FontName "Cantarell 12"
 Gtk/CursorThemeName "DMZ-Black"
