alacritty works on alpine, need to fix that later

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,7 +32,7 @@ set $right l
 # Preferred applications
 set {
     # terminal
-    $term xfce4-terminal
+    $term alacritty
 
     #web browser
     $browser firefox --new-window
