--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,5 +3,6 @@ font_size 12.0
 disable_ligatures never
 focus_follows_mouse yes
 window_padding_width 16
-background_opacity 0.7
+background_opacity 0.8
 
+include dracula.conf
