Some minor modifications: - bug fixes in uefi build - i3 and sway updates

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,10 +1,10 @@
-font=Hack Nerd Font:size=15
+font=Hack:size=15:style=Regular
 pad=16x16
 
 [colors]
-alpha=0.95
+alpha=0.77
 
-; Dracula theme lifted from alacritty
+# Dracula theme lifted from alacritty
 regular0=000000
 regular1=ff5555
 regular2=50fa7b
