--- a/.config/i3/i3status.conf
+++ b/.config/i3/i3status.conf
@@ -10,6 +10,7 @@ general {
         colors = true
         interval = 5
 }
+order += "window_title"
 order += "uptime"
 #order += "ipv6"
 #order += "disk /"
