--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,6 +1,6 @@
 max-visible=1
 anchor=top-right
-font=Hack
+font=Cantarell 15
 
 icons=1
 markup=1
@@ -14,3 +14,6 @@ text-color=#f8f8f2
 border-color=#bd93f9
 border-size=5
 border-radius=2
+
+ignore-timeout=0
+default-timeout=3000
