--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,6 +15,7 @@
 set $mod Mod4
 set $primary DisplayPort-0
 set $secondary HDMI-A-0
+set $filemgr thunar
 
 #autostart
 exec --no-startup-id nitrogen --restore
@@ -42,17 +43,8 @@ font pango:Cantarell Regular 11
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
-bindsym $mod+Return exec x-terminal-emulator
-
 # kill focused window
 bindsym $mod+Shift+q kill
-
-# start dmenu (a program launcher)
-bindsym $mod+Shift+d exec --no-startup-id rofi -sort -sidebar-mode -modi "drun#window#run#ssh#Workspaces:i3_switch_workspaces.sh" -show drun
-#rofi -show window
-bindsym Mod1+Tab exec --no-startup-id rofi -show window
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --entry-type=name --dmenu='dmenu -i -fn Cantarell:bold:pixelsize=20'
 
 # change focus
 bindsym $mod+j focus left
@@ -104,22 +96,37 @@ bindsym $mod+a focus parent
 # focus the child container
 bindsym $mod+c focus child
 
-set $ws1 1: work
-set $ws2 2: www
-set $ws3 3: mail
-set $ws4 4: rem
+#    bspc monitor $PRIMARY -d wrk web com rem
+#    bspc monitor $SECONDARY -d aud vid sys log
+
+set $ws1 "1: wrk"
+set $ws2 "2: web"
+set $ws3 "3: com"
+set $ws4 "4: rem"
+set $ws5 "5: aud"
+set $ws6 "6: vid"
+set $ws7 "7: sys"
+set $ws8 "8: log"
+
+
+workspace $ws1 output $primary
+workspace $ws2 output $primary
+workspace $ws3 output $primary
+workspace $ws4 output $primary
+workspace $ws5 output $secondary
+workspace $ws6 output $secondary
+workspace $ws7 output $secondary
+workspace $ws8 output $secondary
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace $ws3
 bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
 bindsym Mod1+Ctrl+Left workspace prev
 bindsym Mod1+Ctrl+Right workspace next
 bindsym $mod+bracketleft workspace prev
@@ -131,12 +138,10 @@ bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace $ws3
 bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
 
 # rules
 assign [class="Thunderbird"] 3: mail
@@ -189,6 +194,23 @@ mode  "$mode_system" {
 bindsym $mod+Escape mode "$mode_system"
 
 
+
+# Bling
+
+default_border pixel 14
+
+# Set colors from Xresources
+set_from_resource $active color4
+set_from_resource $background background
+set_from_resource $foreground foreground
+set_from_resource $urgent color1
+
+client.focused          $active $active $background $active $active
+client.focused_inactive $background $background $foreground $background $background
+client.unfocused        $background $background $foreground $background $background
+client.urgent           $urgent $urgent $background $urgent $urgent
+client.placeholder      $background $background $foreground $background $background
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
@@ -199,56 +221,54 @@ bar {
 	#status_command ./.local/bin/bumblebee-status -m kernel spacer xrandr cpu memory disk pasource pasink layout date time -p time.format="%H:%M" date.format="%V: %a, %b %d %Y" mpd.format="{artist} - {title}" mpd.layout="mpd.main" cpu.format="{:02.00f}%" memory.format="mem" disk.format="disk" -t onedark-powerline 
     position top
 	output primary
-	font pango:Fira Mono 13
+	font pango:Cantarell 13
 	tray_output primary
     mode hide
     modifier $mod
+    colors {
+		background $background
+		statusline $foreground
+		separator  $active
+
+		focused_workspace  $active $active $foreground
+		active_workspace   $backgroung $background $foreground
+		inactive_workspace $background $background $foreground
+		urgent_workspace   $urgent $urgent $foreground
+		binding_mode       $urgent $urgent $foreground
+   	}
 }
 
 bar {
 	i3bar_command i3bar
 	output $secondary
-	font pango:Fira Mono 13
+	font pango:Cantarell 13
 	tray_output none
     mode hide
     modifier $mod
     position top
+    colors {
+		background $background
+		statusline $foreground
+		separator  $active
+
+		focused_workspace  $active $active $foreground
+		active_workspace   $backgroung $background $foreground
+		inactive_workspace $background $background $foreground
+		urgent_workspace   $urgent $urgent $foreground
+		binding_mode       $urgent $urgent $foreground
+   	}
 }
 
-# Manually set colors
-# define colors used
-set $bg-color            #2f343f
-set $inactive-bg-color   #2f343f
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #5294e2
-
-client.focused          #676E7D #a76E7D #FFFFFF #f76E7D
-client.focused_inactive #2f343f #2f343f #FFFFFF #2f343f
-client.unfocused        #2f343f #2f343f #FFFFFF #2f343f
-client.urgent           #2f343f #2f343f #ffffff #2f343f
-client.placeholder      #2f343f #2f343f #ffffff #2f343f
-
-default_border pixel 14
-
-# Set colors from Xresources
-#set_from_resource $active color4
-#set_from_resource $background background
-#set_from_resource $foreground foreground
-#set_from_resource $urgent color1
-
-#client.focused          $active $active $background $active $active
-#client.focused_inactive $background $background $foreground $background $background
-#client.unfocused        $background $background $foreground $background $background
-#client.urgent           $urgent $urgent $background $urgent $urgent
-#client.placeholder      $background $background $foreground $background $background
-
-# Stolen from regolith
-bindsym $mod+Ctrl+c exec gnome-control-center
-#bindsym $mod+Shift+d exec gnome-control-center display
-bindsym $mod+Shift+n exec nautilus
+# Launchers TODO: move to sxhkd
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --entry-type=name --dmenu="dmenu -p run: -i -sb $active -fn Cantarell:bold:pixelsize=20"
+bindsym $mod+Shift+n exec $filemgr
 bindsym $mod+i bar mode toggle
 bindsym $mod+Shift+v exec --no-startup-id nitrogen --random --set-zoom-fill
+bindsym $mod+Return exec x-terminal-emulator
+bindsym $mod+Shift+Return exec x-www-browser
+bindsym $mod+Shift+d exec --no-startup-id rofi -sort -sidebar-mode -modi "drun#window#run#ssh#Workspaces:i3_switch_workspaces.sh" -show drun
+bindsym Mod1+Tab exec --no-startup-id rofi -show window
+
 # Cause Settings app to float above tiled windows
 floating_maximum_size -1 x -1
 for_window [class="Gnome-control-center"] floating enable
