--- a/.config/i3/i3status.conf
+++ b/.config/i3/i3status.conf
@@ -10,41 +10,14 @@ general {
         colors = true
         interval = 5
 }
-order += "window"
-order += "uptime"
+
 #order += "ipv6"
-#order += "disk /"
+order += "disk /"
 #order += "wireless _first_"
-#order += "ethernet _first_"
+order += "ethernet _first_"
 #order += "battery all"
-#order += "load"
-order += "mpd_status"
-order += "volume_status"
-#order += "hamster"
-order += "keyboard_layout"
-order += "xrandr"
-order += "cpu_temperature 0"
-order += "cpu_usage"
+order += "load"
 order += "tztime local"
-
-volume_status {
-    button_up = 4
-    button_down = 5
-    button_mute = 2
-
-    thresholds = [
-        (0, "#FF0000"),
-        (10, "#E2571E"),
-        (20, "#FF7F00"),
-        (30, "#FFFF00"),
-        (40, "#00FF00"),
-        (50, "#96BF33"),
-        (60, "#0000FF"),
-        (70, "#4B0082"),
-        (80, "#8B00FF"),
-        (90, "#FFFFFF")
-    ]
-}
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
@@ -62,7 +35,7 @@ battery all {
 }
 
 tztime local {
-        format = " %Y-%m-%d %H:%M"
+        format = "%Y-%m-%d %H:%M"
 }
 
 load {
@@ -71,18 +44,4 @@ load {
 
 disk "/" {
         format = "%avail"
-}
-
-cpu_temperature 0 {
-        format = " %degrees °C"
-#        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
-	path = "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input"
-}
-
-cpu_usage {
-        format = " %usage"
-}
-
-uptime {
-    format = '  {hours}:{minutes}'
 }
