playing with xresources

--- a/.config/bspwm/polybar.conf
+++ b/.config/bspwm/polybar.conf
@@ -27,7 +27,7 @@ secondary = #e60053
 alert = ${xrdb:color1:#bd2c40}
 
 [bar/primary]
-monitor = ${env:PRIMARY:DisplayPort-0}
+monitor = ${xrdb:Xdisplay.primary:DisplayPort-0}
 width = 100%
 height = 26
 fixed-center = false
@@ -60,7 +60,7 @@ margin-top = 0
 
 [bar/secondary]
 inherit = bar/primary
-monitor = ${env:SECONDARY:HDMI-A-0}
+monitor = ${xrdb:Xdisplay.secondary:HDMI-A-0}
 modules-left = bspwm
 modules-center = hamster mpd
 modules-right = pulseaudio date
@@ -203,7 +203,7 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 [module/temperature]
 type = internal/temperature
 #thermal-zone = 0
-hwmon-path = /sys/class/hwmon/hwmon1/temp2_input
+hwmon-path = ${xrdb:hwmon.temperature:/sys/class/hwmon/hwmon1/temp2_input}
 warn-temperature = 60
 format = <ramp> <label>
 format-warn = <ramp> <label-warn>
