--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,8 +13,10 @@
 #exec --no-startup-id xmodmap ~/.Xmodmap
 
 set $mod Mod4
-set $primary DisplayPort-0
-set $secondary HDMI-A-0
+set_from_resource $primary Xdisplay.primary
+set_from_resource $secondary Xdisplay.secondary
+#set $primary DisplayPort-0
+#set $secondary HDMI-A-0
 set $filemgr thunar
 
 #autostart
@@ -62,7 +64,7 @@ bindsym $mod+Right focus right
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
-bindsym $mod+Shift+odiaeresis move right
+bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -142,10 +144,6 @@ bindsym $mod+Shift+5 move container to workspace $ws5
 bindsym $mod+Shift+6 move container to workspace $ws6
 bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
-
-# rules
-assign [class="Thunderbird"] 3: mail
-assign [class="Wfica"] 4: rem
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -288,6 +286,9 @@ for_window [class="Gnome-tweaks"] floating enable
 for_window [class="Nitrogen"] floating enable
 for_window [class="Hamster"] floating enable
 for_window [class="pavu.*"] floating enable
+# Default locations
+assign [class="Thunderbird"] $ws3
+assign [class="Wfica"] $ws4
 
 ### i3-gaps stuff ###
 
