--- a/.config/i3/config
+++ b/.config/i3/config
@@ -223,6 +223,7 @@ client.placeholder      $background $background $foreground $background $backgro
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+	id primary
 	i3bar_command i3bar
         #status_command i3blocks
         #status_command i3status -c ~/.config/i3/i3status.conf
@@ -248,9 +249,10 @@ bar {
 }
 
 bar {
-	#i3bar_command i3bar
+	id secondary
+	i3bar_command i3bar
 	status_command i3status -c ~/.config/i3/i3status.conf
-	output $secondary
+	output nonprimary
 	font pango:Cantarell 13
 	tray_output none
     #mode hide
