--- a/.config/i3/py3status.conf
+++ b/.config/i3/py3status.conf
@@ -10,7 +10,7 @@ general {
         colors = true
         interval = 5
 }
-order += "window_title"
+order += "window"
 order += "uptime"
 #order += "ipv6"
 #order += "disk /"
