--- a/.config/i3/config
+++ b/.config/i3/config
@@ -229,7 +229,7 @@ bar {
 	status_command py3status -c ~/.config/i3/py3status.conf
 	#status_command ./.local/bin/bumblebee-status -m kernel spacer xrandr cpu memory disk pasource pasink layout date time -p time.format="%H:%M" date.format="%V: %a, %b %d %Y" mpd.format="{artist} - {title}" mpd.layout="mpd.main" cpu.format="{:02.00f}%" memory.format="mem" disk.format="disk" -t onedark-powerline 
     position top
-	output primary
+	output $primary
 	font pango:Cantarell 13
 	tray_output primary
     #mode hide
