--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -29,7 +29,9 @@ settings:
   colors.webpage.preferred_color_scheme:
     global: dark
   content.notifications:
+    https://outlook.office.com: true
     https://teams.microsoft.com: true
+    https://www.reddit.com: true
   content.proxy:
     global: system
   fonts.default_family:
