Some more unification between xfce, bspwm and i3

--- a/.config/bspwm/sxhkd.conf
+++ b/.config/bspwm/sxhkd.conf
@@ -7,7 +7,7 @@ super + Return
 
 # program launcher dmenu
 super + d
-	~/.config/bspwm/dmenu-run.sh
+	dmenu-run.sh
 
 # program launcher rofi
 super + @space
@@ -15,7 +15,7 @@ super + @space
 
 # system menu
 super + Escape
-	~/.config/bspwm/dmenu-sys.sh
+	dmenu-sys.sh
 
 # MPC prev,toggle,next
 ctrl + alt + {Left, Down, Right}
@@ -23,7 +23,7 @@ ctrl + alt + {Left, Down, Right}
 
 # dmenu-mpc
 ctrl + alt + Up
-	~/.config/bspwm/dmenu-mpd.sh -a :: $DMENU_DEFAULTS
+	dmenu-mpd.sh -a :: $DMENU_DEFAULTS
 
 # bar visibility
 ctrl + alt + Return
@@ -31,7 +31,7 @@ ctrl + alt + Return
 
 # firefox, nautilus, thunar, code, geany, hamster
 super + alt {f,n,t,c,g,h}
-	{firefox,nautilus,thunar,code,geany,~/.config/bspwm/dmenu-hamster.sh ask}
+	{firefox,nautilus,thunar,code,geany,dmenu-hamster.sh ask}
 
 # renitrogen.sh
 super + shift + V
