--- a/.config/i3/py3status.conf
+++ b/.config/i3/py3status.conf
@@ -75,8 +75,9 @@ disk "/" {
 
 cpu_temperature 0 {
         format = " %degrees °C"
-#        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
-	path = "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input"
+#   path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
+#	path = "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input"
+	    path = "/sys/devices/virtual/thermal/thermal_zone0/hwmon1/temp1_input"
 }
 
 cpu_usage {
