bspwm: add screenshot keybind

--- a/.config/bspwm/sxhkd.conf
+++ b/.config/bspwm/sxhkd.conf
@@ -141,4 +141,7 @@ super + alt + shift + {h,j,k,l}
 # move a floating window
 super + {Left,Down,Up,Right}
 	bspc node -v {-20 0,0 20,0 -20,20 0}
-	        
+	
+# take a screenshot 
+control + Print
+    scrot $HOME/'Pictures/Screenshots/%Y-%m-%d_%H%M%S-$wx$h_scrot.png'        
