--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,6 +13,7 @@
 #exec --no-startup-id xmodmap ~/.Xmodmap
 
 set $mod Mod4
+exec --no-startup-id xrdb -merge ~/.Xresources
 set_from_resource $primary Xdisplay.primary
 set_from_resource $secondary Xdisplay.secondary
 #set $primary DisplayPort-0
