--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,15 +9,10 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-#setxkbmap "us(altgr-intl)"
-#exec --no-startup-id xmodmap ~/.Xmodmap
 
 set $mod Mod4
-exec --no-startup-id xrdb -merge ~/.Xresources
-set_from_resource $primary Xdisplay.primary
-set_from_resource $secondary Xdisplay.secondary
-#set $primary DisplayPort-0
-#set $secondary HDMI-A-0
+set_from_resource $primary Xdisplay.primary DisplayPort-0
+set_from_resource $secondary Xdisplay.secondary HDMI-A-0
 set $filemgr thunar
 
 #autostart
@@ -27,7 +22,6 @@ exec --no-startup-id redshift-gtk
 exec --no-startup-id udiskie -s -A -f ranger
 exec --no-startup-id compton
 exec --no-startup-id xsettingsd -c ~/.config/i3/xsettings.conf
-# exec --no-startup-id xrandr --output $primary --primary --output $secondary --left-of $primary
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Cantarell Regular 11
@@ -98,9 +92,6 @@ bindsym $mod+a focus parent
 
 # focus the child container
 bindsym $mod+c focus child
-
-#    bspc monitor $PRIMARY -d wrk web com rem
-#    bspc monitor $SECONDARY -d aud vid sys log
 
 set $ws1 "1: wrk"
 set $ws2 "2: web"
