--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,6 +14,8 @@ set $mod Mod4
 set_from_resource $primary Xdisplay.primary DisplayPort-0
 set_from_resource $secondary Xdisplay.secondary HDMI-A-0
 set $filemgr thunar
+set $term urxvtc
+set $browser firefox
 
 #autostart
 exec --no-startup-id nitrogen --restore
@@ -22,6 +24,8 @@ exec --no-startup-id redshift-gtk
 exec --no-startup-id udiskie -s -A -f ranger
 exec --no-startup-id compton
 exec --no-startup-id xsettingsd -c ~/.config/i3/xsettings.conf
+exec --no-statrup-id urxvtd
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Cantarell Regular 11
@@ -248,8 +252,8 @@ bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --entry-type=name --dmenu="
 bindsym $mod+Shift+n exec $filemgr
 bindsym $mod+i bar mode toggle
 bindsym $mod+Shift+v exec --no-startup-id nitrogen --random --set-zoom-fill
-bindsym $mod+Return exec x-terminal-emulator
-bindsym $mod+Shift+Return exec x-www-browser
+bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec $browser
 bindsym $mod+Shift+d exec --no-startup-id rofi -sort -sidebar-mode -modi "drun#window#run#ssh#Workspaces:i3_switch_workspaces.sh" -show drun
 bindsym Mod1+Tab exec --no-startup-id rofi -show window
 
