--- a/.config/bspwm/sxhkd.conf
+++ b/.config/bspwm/sxhkd.conf
@@ -35,7 +35,7 @@ super + alt {f,n,t,c,g,h}
 
 # renitrogen.sh
 super + shift + V
-	~/.config/bspwm/renitrogen.sh
+	renitrogen.sh
 
 # Hotkey cheat sheet
 super + F1
