polybar on void

--- a/.config/bspwm/polybar.conf
+++ b/.config/bspwm/polybar.conf
@@ -15,9 +15,12 @@
 ;   The README contains a lot of information
 ;
 ;==========================================================
+[settings]
+pseudo-transparency = true
 
 [colors]
-background = ${xrdb:color0:#222}
+;background = ${xrdb:color0:#222}
+background = #aa2f343f
 background-alt = ${xrdb:color4:#444}
 background-dim = #7F417B
 foreground = ${xrdb:color7:#222}
@@ -28,7 +31,8 @@ alert = ${xrdb:color1:#bd2c40}
 
 [bar/primary]
 monitor = ${xrdb:Xdisplay.primary:DisplayPort-0}
-width = 100%
+width = 50%
+offset-x = 25%
 height = 26
 fixed-center = false
 background = ${colors.background}
@@ -41,9 +45,9 @@ padding-left = 0
 padding-right = 0
 module-margin-left = 0
 module-margin-right = 3
-font-0 = Ubuntu:pixelsize=16;2
-font-1 = unifont:fontformat=truetype:size=16:antialias=false;0
-font-2 = FontAwesome:pixelsize=16;3
+font-0 = Ubuntu:pixelsize=14;2
+font-1 = unifont:fontformat=truetype:size=14:antialias=false;0
+font-2 = FontAwesome:pixelsize=14;3
 modules-left = bspwm
 modules-center = xwindow
 modules-right = xkeyboard memory cpu temperature
