--- a/.config/sway/config
+++ b/.config/sway/config
@@ -52,28 +52,13 @@ set {
     # Note: it's recommended that you pass the final command to sway
     #set $menu dmenu_path | bemenu | xargs swaymsg exec --
     $menu wofi --show=drun | xargs swaymsg exec --
-
-    #monitors
-    $primary DP-1
-    $secondary HDMI-A-1
 }
 ### Output configuration
-#
-#output $primary pos 0 0
-#output $secondary pos 2560 0
-#output DP-2 disable
-#output DP-3 disable
-
+# is in $HOSTNAME.conf
+include ~/.config/$HOSTNAME.conf
 
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 output * bg ~/Pictures/Backdrops/dracula/debian.png fill
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
 #
@@ -162,7 +147,7 @@ bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
-# ditto, with arrow keys
+# dito, with arrow keys
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
