--- a/.config/i3/config
+++ b/.config/i3/config
@@ -24,7 +24,8 @@ exec --no-startup-id redshift-gtk
 exec --no-startup-id udiskie -s -A -f ranger
 exec --no-startup-id compton
 exec --no-startup-id xsettingsd -c ~/.config/i3/xsettings.conf
-exec --no-statrup-id urxvtd
+exec --no-statrup-id urxvtd -f
+exec --no-startup-id xsetroot -cursor_name left_ptr
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
