--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 set_from_resource $primary Xdisplay.primary DisplayPort-0
 set_from_resource $secondary Xdisplay.secondary HDMI-A-0
 set $filemgr thunar
-set $term urxvtcd
+set $term urxvt
 set $browser firefox
 
 #autostart
