--- a/.config/i3/config
+++ b/.config/i3/config
@@ -29,7 +29,7 @@ exec --no-startup-id xsetroot -cursor_name left_ptr
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Cantarell Regular 11
+font pango:Iosevka Term 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -208,7 +208,7 @@ bar {
 	#status_command ./.local/bin/bumblebee-status -m kernel spacer xrandr cpu memory disk pasource pasink layout date time -p time.format="%H:%M" date.format="%V: %a, %b %d %Y" mpd.format="{artist} - {title}" mpd.layout="mpd.main" cpu.format="{:02.00f}%" memory.format="mem" disk.format="disk" -t onedark-powerline 
     position top
 	output $primary
-	font pango:Cantarell Bold 13
+	font pango:Iosevka Term 13
 	tray_output primary
     #mode hide
     modifier $mod
@@ -230,7 +230,7 @@ bar {
 	i3bar_command i3bar
 	status_command i3status -c ~/.config/i3/i3status.conf
 	output nonprimary
-	font pango:Cantarell Bold 13
+	font pango:Iosevka Term 13
 	tray_output none
     #mode hide
     modifier $mod
