--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,15 +1,26 @@
 [global_config]
   tab_position = hidden
   title_hide_sizetext = True
+  inactive_color_offset = 1.0
+  enabled_plugins = LaunchpadBugURLHandler, LaunchpadCodeURLHandler, APTURLHandler, CustomCommandsMenu
 [keybindings]
 [profiles]
   [[default]]
+    icon_bell = False
+    background_darkness = 0.93
+    cursor_color = "#aaaaaa"
+    show_titlebar = False
+    scrollbar_position = hidden
+    use_theme_colors = True
+  [[pi]]
     icon_bell = False
     background_darkness = 0.93
     background_type = transparent
     cursor_color = "#aaaaaa"
     show_titlebar = False
     scrollbar_position = hidden
+    use_custom_command = True
+    custom_command = ssh root@raspberrypi
     use_theme_colors = True
 [layouts]
   [[default]]
