--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -7,10 +7,12 @@
 [profiles]
   [[default]]
     icon_bell = False
-    background_darkness = 0.93
+    background_darkness = 0.9
+    background_type = transparent
     cursor_color = "#aaaaaa"
     show_titlebar = False
     scrollbar_position = hidden
+    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     use_theme_colors = True
   [[pi]]
     icon_bell = False
