--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -7,10 +7,12 @@
 [profiles]
   [[default]]
     icon_bell = False
-    background_darkness = 0.93
+    background_darkness = 0.9
+    background_type = transparent
     cursor_color = "#aaaaaa"
     show_titlebar = False
     scrollbar_position = hidden
+    scrollback_infinite = True
     use_theme_colors = True
   [[pi]]
     icon_bell = False
