--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -182,10 +182,10 @@ blur-background = true
 
 # Specify the blur convolution kernel, with the following format:
 # example:
-#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ""
-blur-kern = "3x3box";
+#blur-kern = "3x3box";
 
 
 # Exclude conditions for background blur.
@@ -405,7 +405,7 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
+  dock = { shadow = false; opacity = 1; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; }
   dropdown_menu = { opacity = 1; }
