--- a/.config/bspwm/sxhkd.conf
+++ b/.config/bspwm/sxhkd.conf
@@ -3,7 +3,7 @@
 
 # terminal emulator
 super + Return
-	urxvtc
+	x-terminal-emulator
 
 # program launcher dmenu
 super + d
@@ -33,9 +33,9 @@ ctrl + alt + Return
 super + alt {f,n,t,c,g,h}
 	{firefox,nautilus,thunar,code,geany,dmenu-hamster.sh ask}
 
-# renitrogen.sh
+# refresh backdrop
 super + shift + V
-	renitrogen.sh
+	update-hsetroot.sh
 
 # Hotkey cheat sheet
 super + F1
