--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,9 +1,32 @@
-Xft/Antialias 1
-Xft/HintStyle "hintmedium"
-Xft/Hinting 1
-Xft/RGBA "none"
-Xft/lcdfilter "none"
+Gdk/WindowScalingFactor 1
+Gtk/ButtonImages 1
+Gtk/CanChangeAccels 0
+Gtk/ColorPalette "black:white:gray50:red:purple:blue:light blue:green:yellow:orange:lavender:brown:goldenrod4:dodger blue:pink:light green:gray10:gray30:gray75:gray90"
+Gtk/CursorThemeName "Adwaita"
+Gtk/CursorThemeSize 20
+Gtk/DecorationLayout "menu:minimize,maximize,close"
+Gtk/DialogsUseHeader 1
+Gtk/FontName "Cantarell 13"
+Gtk/IconSizes ""
+Gtk/KeyThemeName ""
+Gtk/MenuBarAccel "F10"
+Gtk/MenuImages 1
+Gtk/MonospaceFontName "Iosevka Term 13"
+Gtk/TitlebarMiddleClick "lower"
+Gtk/ToolbarIconSize 3
+Gtk/ToolbarStyle "icons"
+Net/CursorBlink 1
+Net/CursorBlinkTime 1200
+Net/DndDragThreshold 8
+Net/DoubleClickDistance 5
+Net/DoubleClickTime 400
+Net/EnableEventSounds 0
+Net/EnableInputFeedbackSounds 0
 Net/IconThemeName "Faba"
+Net/SoundThemeName "default"
 Net/ThemeName "Dracula"
-Gtk/FontName "Cantarell 12"
-Gtk/CursorThemeName "DMZ-Black"
+Xft/Antialias -1
+Xft/DPI 98304
+Xft/Hinting 1
+Xft/HintStyle "hintslight"
+Xft/RGBA "none"
