--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,19 @@
-font_family hack
-font_size 12.0
+#### fonts
+font_family Victor Mono Medium Nerd Font Complete
+bold_font Victor Mono Bold Nerd Font Complete
+italic_font Victor Mono Italic Nerd Font Complete
+font_size 13
+#symbol_map U+23FB-U+23FE,U+2B58,U+E200-U+E2A9,U+E0A0-U+E0A3,U+E0B0-U+E0BF,U+E0C0-U+E0C8,U+E0CC-U+E0CF,U+E0D0-U+E0D2,U+E0D4,U+E700-U+E7C5,U+F000-U+F2E0,U+2665,U+26A1,U+F400-U+F4A8,U+F67C,U+E000-U+E00A,U+F300-U+F313,U+E5FA-U+E62B Symbols-1000-em Nerd Font Complete
+# discretionary ligatures, less weird %
+font_features VictorMonoNerdFontCompleteM-Regular +dlig cv93=3
+
+# Make Ü/Ö fit properly
+# https://github.com/kovidgoyal/kitty/issues/2964
+adjust_line_height 2
+# https://github.com/kovidgoyal/kitty/issues/297
 disable_ligatures never
 focus_follows_mouse yes
 window_padding_width 16
-background_opacity 0.8
+background_opacity 0.95
 
 include dracula.conf
