--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -33,7 +33,7 @@ settings:
     https://teams.microsoft.com: true
     https://www.reddit.com: true
   content.proxy:
-    global: none
+    global: http://localhost:8086/
   fonts.default_family:
     global: Iosevka Term
   fonts.default_size:
