--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -16,7 +16,7 @@
     background_darkness = 0.95
     background_type = transparent
     cursor_color = "#aaaaaa"
-    font = Iosevka 13
+    font = Iosevka Medium 13
     foreground_color = "#f8f8f2"
     show_titlebar = False
     scrollbar_position = hidden
