investigate helix, dwm

--- a/.local/share/dwm/sxhkd.conf
+++ b/.local/share/dwm/sxhkd.conf
@@ -25,10 +25,6 @@ ctrl + alt + {Left, Down, Right}
 ctrl + alt + Up
 	dmenu-mpd.sh -a :: $DMENU_DEFAULTS
 
-# bar visibility
-ctrl + alt + Return
-	~/.config/bspwm/polybar.sh toggle
-
 # firefox, nautilus, thunar, code, geany, hamster
 super + alt {f,n,t,c,g,h}
 	{firefox,nautilus,thunar,code,geany,dmenu-hamster.sh ask}
@@ -41,7 +37,10 @@ ctrl + alt + V
 super + F1
 	urxvt -name Hotkeys -title "Hotkeys - press q to quit" -geometry 136x36 -e /bin/bash ~/.config/2bwm/sxhkd-help.sh ::
 
-	
+# Restart dwm
+super + shift + r
+  pkill -HUP dwm
+
 # take a screenshot 
 control + Print
     scrot $HOME/'Pictures/Screenshots/%Y-%m-%d_%H%M%S-$wx$h_scrot.png'        
