media keys support

--- a/.config/bspwm/sxhkd.conf
+++ b/.config/bspwm/sxhkd.conf
@@ -145,3 +145,8 @@ super + {Left,Down,Up,Right}
 # take a screenshot 
 control + Print
     scrot $HOME/'Pictures/Screenshots/%Y-%m-%d_%H%M%S-$wx$h_scrot.png'        
+
+# Audio
+XF86Audio{Mute,RaiseVolume,LowerVolume}
+  amixer -q set Master {toggle,5%+,5%-}
+
