--- a/.config/i3/py3status.conf
+++ b/.config/i3/py3status.conf
@@ -18,7 +18,8 @@ order += "uptime"
 #order += "ethernet _first_"
 #order += "battery all"
 #order += "load"
-order += "mpd_status"
+#order += "mpd_status"
+order += "mpris"
 order += "volume_status"
 order += "hamster"
 order += "keyboard_layout"
@@ -87,3 +88,10 @@ cpu_usage {
 uptime {
     format = '  {hours}:{minutes}'
 }
+
+mpris {
+  format = "[[{artist} - {title}]|[{title}]]"
+  format_none = ""
+  player_priority = "[*, mpd]"
+}
+
