tmux & py3status changes

--- a/.config/i3/py3status.conf
+++ b/.config/i3/py3status.conf
@@ -89,7 +89,8 @@ uptime {
 
 mpris {
   format = "[[{artist} - {title}]|[{title}]]"
-  format_none = ""
+  format_none = "-"
   player_priority = "[*, mpd]"
+  color_stopped = "#000010"
 }
 
