--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-set -ga terminal-overrides ",xterm-256color*:Tc"
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 unbind C-b
 set-option -g prefix C-a
@@ -11,7 +12,7 @@ set -g status-style 'bg=#44475a fg=#f8f8f2'
 #open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
 #reload conf
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Reloading config"
 #basic
 set -g base-index 1
 set -g pane-base-index 1
